Stop meta wrapping on compact mobile views

--- a/assets/styles/components/_entry.scss
+++ b/assets/styles/components/_entry.scss
@@ -44,7 +44,7 @@
 
     .view-compact & {
       grid-template-areas: "title image vote"
-                       "meta image vote"
+                       "meta meta vote"
                        "footer footer vote"
                        "body body body";
       grid-template-columns: 1fr min-content min-content;
@@ -66,7 +66,7 @@
       }
     }
 
-    .view-compact &.no-image {
+    .view-compact &.no-meta {
       grid-template-areas: "title vote"
                        "shortDesc shortDesc"
                        "meta meta"
